crates/wac-parser/tests/resolution/fail/invalid-world-include.wac
type x = func();

world w {
    include x;
}